data/derived/sp14/progs/unify/prog3870.ml.out
Characters 65-80:
  | hd::tl -> helper (hd::xs) 
              ^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type 'b list
